# canonical_tag_resolver_poc

./: .gitignore  Dockerfile-api  Dockerfile-stream-processor  README.md  api.py  models.py  pyproject.toml  requirements.txt  settings.py  stream_processor.py  template.yaml
src/: api.py  models.py  shared.py  stream_processor.py
