[project]
name = "canonical-tag-resolver-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.5.0",
    "aws-xray-sdk>=2.15.0",
    "boto3>=1.42.39",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "meilisearch>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
]
